<resources>
    <string name="app_name">StoryApp</string>
    <string name="tv_password_input">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="tv_email_input">Enter your email address</string>
    <string name="tv_input_name">Enter your name</string>
    <string name="register">REGISTER</string>
    <string name="camera">Camera</string>
    <string name="deskripsi">Description</string>
    <string name="format_email_salah">Invalid Email Format</string>
    <string name="sukses_login">Login Success</string>
    <string name="login_berhasil">Login Successful</string>
    <string name="lanjut">Next</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="token_disimpan">Token Saved.</string>
    <string name="nama">Name</string>
    <string name="sign_in_to_your_account">Sign in to Your Account</string>
    <string name="fill_to_sign_in_to_your_account">Fill to sign in to your account</string>
    <string name="add">Add</string>
    <string name="login_disini">Login Here</string>
    <string name="sudah_punya_akun">Already have account?</string>
    <string name="complete_your_data_to_register">Complete your data to register</string>
    <string name="register_your_account">Register Your Account</string>
    <string name="gambar_user">User Picture</string>
    <string name="datecreated">DateCreated</string>
    <string name="tell_us_about_your_story">Tell us about your story</string>
    <string name="welcome_to_storyapp">Welcome to StoryApp</string>
    <string name="password_harus_diisi">Password must be filled in</string>
    <string name="email_harus_diisi">Email must be filled in</string>
    <string name="password_tidak_boleh_kurang_dari_8_karakter">Password must be no less than 8 characters</string>
    <string name="akun_dengan_berhasil_dibuat_login_sekarang">Account with %1$s successfully created. Login Now.</string>
    <string name="akun_dibuat">Account Created</string>
    <string name="created_at">Created at:</string>
    <string name="description">Description:</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logo_app">Logo App</string>
    <string name="register_here">Register Here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="story_picture">Story Picture</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="detail_story">Story Detail</string>
    <string name="upload_story">Upload Story</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="no_story">No Story</string>
    <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="output_date">dd MMM yyyy | HH.mm</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">Maps</string>
    <string name="tv_location">Location:</string>
    <string name="tv_getLocation">Location</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="shareloc_confirm">Do you want to share your location?</string>
    <string name="location_text">Location : %1\$s, %2\$s</string>

</resources>